--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,7 @@ body {
 	height: 60%;
 	width: 50%;
 	margin: 0 auto;
+	text-align: center;
 }
 
 .look-grid {
@@ -54,4 +55,111 @@ body {
 	height: 120px;
 	width: 120px;
 	border: solid 1px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.item {
+  position: relative;
+  z-index: 1;
+  background: #fff;
+  width: 100%;
+  padding: 10px 10px 10px 15px;
+  margin: 0 0 10px 0;
+  overflow: auto;
+  border: 1px solid #e5e5df;
+  border-radius: 3px;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.item.big {
+  position: absolute;
+  width: 450px;
+  height: 200px;
+  margin: auto;
+  padding: 15px;
+  top: 0; left: 0; bottom: 100px; right: 0;
+  z-index: 3;
+}
+
+.item.big input[type=text], textarea {
+  width : 100%;
+  margin: 3px 0;
+  font-size: 13px;
+  border: none;
+}
+
+.item.big input[type=text] {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.item.big input[type=text]:focus,
+.item.big textarea:focus {
+  outline: dashed thin #999;
+  outline-offset: 2px;
+}
+
+.item.big label {
+  margin: 3px 0 7px 3px;
+  color: #a7a7a7;
+  display: inline-block;
+  width: 60px;
+}
+
+.actions {
+  margin-top: 10px;
+  text-align: right;
+}
+
+.item.big button {
+  font-size:14px;
+  padding: 8px;
+}
+
+.item-edit{
+  position: absolute;
+  top:10px;
+  right: 10px;
+  opacity: 0;
+  transition: opacity .25s ease-in;
+}
+
+.clothing:hover .item-edit{
+  opacity: 1;
+}
+
+.item-edit a{
+  text-decoration: none;
+  color: #999;
+  font-size: 17px;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0; left: 0; bottom: 0; right: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.float-button {
+  position: absolute;
+  height: 56px;
+  width: 56px;
+  z-index: 2;
+  right: 20px;
+  bottom: 20px;
+  background: #D43A2F;
+  color: white;
+  border-radius: 100%;
+  font-size: 34px;
+  text-align: center;
+  text-decoration: none;
+  line-height: 50px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
