--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@
   min-width: 0;
 }
 
-html, body, #root, .app {
+html, body, #root {
 	height: 100%;
 	margin: 0;
 	padding: 0;
@@ -30,25 +30,21 @@ a {
 }
 
 .look, .packing-list {
-	padding: 10%;
+	padding: 80px 50px;
 	position: relative;
 	height: 76%;
-	width: 80%;
 	margin: 0 auto;
 	text-align: center;
-	z-index: -1;
 }
 
 .look-flex {
 	display: flex;
-	height: 100%;
-	flex-direction: column;
 	flex-wrap: wrap;
 	align-content: center;
 }
 
 .look .look-grid {
-	width: 50%;
+	flex: 1;
 }
 
 .selection-lists {
@@ -63,8 +59,9 @@ a {
 	width: 100%;
 	background-image: url(./dark-edges.jpg);
 	background-size: cover;
-	border-top: black solid;
+	border-top: black solid 4px;
 	box-shadow: inset 0 0 6em black;
+	overflow: hidden;
 }
 
 .list-title {
@@ -85,18 +82,22 @@ a {
 	content: "▽";
 }
 
+.list-title--is-open {
+	border-bottom: black solid;
+}
+
 
 .toggle-enter {
   max-height: 0;
   overflow: hidden;
 }
 .toggle-enter.toggle-enter-active {
-  max-height: 200px;
+  max-height: 400px;
   overflow: hidden;
   transition: max-height .5s ease-in;
 }
 .toggle-leave {
-  max-height: 200px;
+  max-height: 400px;
   overflow: hidden;
 }
 .toggle-leave.toggle-leave-active {
@@ -107,13 +108,11 @@ a {
 
 .clothing {
 	display: inline-flex;
-	height: 120px;
-	width: 120px;
 }
 
 img {
   max-width: 100%;
-  height: auto;
+  max-height: 100%;
 }
 
 .item, .clothing {
@@ -128,7 +127,7 @@ img {
 .item.big {
   position: absolute;
   width: 450px;
-  height: 200px;
+  height: 250px;
   margin: auto;
   padding: 15px;
   top: 0; left: 0; bottom: 100px; right: 0;
@@ -181,14 +180,22 @@ img {
   transition: opacity .25s ease-in;
 }
 
-.clothing:hover .item-edit{
+.item-toggle{
+  position: absolute;
+  top: 8px;
+  left: 10px;
+  opacity: 0;
+  transition: opacity .25s ease-in;
+}
+
+.clothing:hover .item-edit, .clothing:hover .item-toggle{
   opacity: 1;
 }
 
 .look-edit{
   position: absolute;
-  top:10px;
-  right: 10px;
+  top: 80px;
+  right: 40px;
   opacity: 0;
   transition: opacity .25s ease-in;
 }
@@ -203,7 +210,7 @@ img {
 	opacity: 1;
 }
 
-.item-edit a, .look-edit a, a.look-new{
+.item-edit a, .look-edit a, a.look-new, .item-toggle{
 	z-index: 2;
   text-decoration: none;
   color: #999;
@@ -242,9 +249,8 @@ img {
 
 .add-button {
   position: absolute;
-  height: 0px;
-  width: 56px;
-  z-index: 2;
+  width: 50px;
+  z-index: -1;
   background: #34495e;
   color: white;
   border-radius: 6px;
@@ -252,20 +258,21 @@ img {
   line-height: 30px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 	right: 0;
-	bottom: 0;
-	transition: opacity .25s ease-in;
+	opacity: 0;
+	bottom: 12px;
+	transition: bottom .5s, opacity .5s, width .5s;
 }
 
 .add-look {
-	bottom: 110px;
-  height: 30px;
-	transition: opacity .25s ease-out;
+	width: 60px;
+	opacity: 1;
+	bottom: 106px;
 }
 
 .add-item {
-	bottom: 70px;
-  height: 30px;
-	transition: opacity .25s ease-out;
+	width: 60px;
+	opacity: 1;
+	bottom: 65px;
 }
 
 .look .float-button {
@@ -284,10 +291,10 @@ img {
 
 .drawer {
 	position: absolute;
-	bottom: -850%;
+	bottom: -950%;
 	left: 8%;
 	background-color: #424242;
-	height: 850%;
+	height: 950%;
 	width: 84%;
 	transition: ease-in-out .75s;
 	z-index: -1;
@@ -303,7 +310,7 @@ img {
 	position: absolute;
 	left: 5%;
 	top: 36%;
-  width: 4%;
+  width: 36px;
   height: 50%;
   transform: rotate(0deg);
   transition: .5s ease-in-out;
@@ -361,18 +368,24 @@ img {
 	font-size: 4em;
 	transform: rotate(180deg);
 	right: 2%;
+	z-index: 2;
 }
 
 .search-options {
-	display: none;
+	z-index: -1;
+	display: flex;
+	opacity: 0;
 	width: 100%;
-	top: 10%;
-	position: absolute;
-	background-color: #424242;
+	top: 0px;
+	position: fixed;
 	align-items: center;
-	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+	background-color: rgba(0,0,0,0.6);
+	padding: 10px;
+	transition: top .25s, opacity .25s linear;
 }
 
 .search-options--is-open {
-	display: flex;
+	z-index: 2;
+	top: 60px;
+	opacity: 1;
 }
